Tests/RunCMake/CMakePresets/InvalidArchitectureStrategy-stderr.txt
^CMake Error: Could not read presets from [^
]*/Tests/RunCMake/CMakePresets/InvalidArchitectureStrategy:
Error: @9,21: Invalid preset
        "strategy": {}
                    \^$
